--- a/index.html
+++ b/index.html
@@ -5,9 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <script src="./js/lesson1.js" type="module"></script> -->
-    <script src="./js/string.js" type="module"></script>
+    <form action="" name="newsForm">
+      <label for="country"> Choose your country: </label>
+      <select type="text" name="country">
+        <option value="us">USA</option>
+        <option value="ua" selected>Ukraine</option>
+        <option value="cz">Czech Republic</option>
+      </select>
+      <label for="category"> Choose category: </label>
+      <select type="text" name="category">
+        <option value="business">business</option>
+        <option value="entertainment">entertainment</option>
+        <option value="general">general</option>
+        <option value="health">health</option>
+        <option value="science">science</option>
+        <option value="sports">sports</option>
+        <option value="technology">technology</option>
+      </select>
+      <button type="submit" name="submit">Search</button>
+    </form>
+
+    <ul class="newsBox"></ul>
+    <!-- <script src="./js/var.js" type="module"></script> -->
+    <!-- <script src="./js/string.js" type="module"></script> -->
+    <!-- <script src="./js/num.js" type="module"></script> -->
+    <!-- <script src="./js/if-else.js" type="module"></script> -->
+    <!-- <script src="./js/functions.js" type="module"></script> -->
+    <!-- <script src="./js/objects.js" type="module"></script> -->
+    <!-- <script src="./js/callback.js" type="module"></script> -->
+    <!-- <script src="./js/homeTasks.js" type="module"></script> -->
+    <!-- <script src="./js/homeTasks2.js" type="module"></script> -->
+    <script src="./js/homeTasks3.js" type="module"></script>
+    <!-- <script src="./js/apiNews.js" type="module"></script> -->
   </body>
 </html>
